--- a/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
@@ -60,6 +60,7 @@
 
         <div class="input-group h-100 justify-content-center align-items-center">
             <div class="col-md-offset-2 col-md-10 bottom-right">
+                <input type="hidden" value="@ViewBag.WebsiteHostName" name="WebsiteHostName" />
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <div class="back-list">@Html.ActionLink("Back to List", "Index", "TenantWebsites", null, new { @class = "btn btn-default" })</div>
             </div>
