Added missing styles to ui-settings.css file Imported from Changeset 2581

--- a/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
@@ -13,28 +13,207 @@ body {
     background-color: var(--body-background-color);
 }
 
-    body,
-    body *,
-    .uni-pages-main .nb_prd_filterwrap .list-group-item,
-    .btn .button,
-    .modal-title {
-        font-family: var(--primary-font-family);
-    }
+body * {
+    font-family: var(--primary-font-family);
+}
 
 .uni-pages-main .nb_prd_filterwrap .list-group-item,
 .btn .button,
-.modal-title {
+.modal-title,
+h6,
+.search_wrap_main .search_input,
+.nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .head,
+.nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li > a:hover,
+.nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap h5,
+.nb_header_style1 h3,
+.nb_feat_prod_sec .nb_featuredPrdCarrousle .nb_fp_boxwrap .prd_det_sec .prd_amnt,
+.nb_sub_sec .nb_sub_wrap .sub_form_wrap .sf_hd,
+.ftb_sec .nb_ftb_box .nb_fb_con .heading,
+.nb_footer .nb_footersec_inner .followUsWrap h5,
+.accordion ul li div a h2,
+.res_navWrapper .nb_lgn_btn_res,
+.nb_prdlisting_pgsec .nb_prd_filterwrap .prod_count_sec .count,
+.nb_prd_listing_wrap .head,
+.prd_lst_boxouter .foot .prd_amnt,
+.nb_qcvboxwrap .head,
+.nb_qcvboxwrap .prd_amnt,
+.nb_qcvboxwrap .sizeWrap .size_boxList li a,
+.nb_qcvboxwrap .footSec button.addTobasket,
+.nb_qcvboxwrap .footSec .addtowishlistbtn,
+.nb_prd_det_rightsec .head,
+.nb_prd_det_rightsec .prd_amnt,
+.nb_prd_det_rightsec .sizeWrap .size_boxList li a,
+.nb_prd_det_rightsec .footSec button.addTobasket,
+.nb_prd_det_rightsec .footSec .addtowishlistbtn,
+.nb_prod_bottomdes .head,
+.nb_cat_selectBx .prdname,
+.nb_prd_namewamnt_box .amnt,
+.contact_form_sec .contact_pg_wrap .nb_contact_form .callus_frmgrp p,
+.contact_form_sec .contact_pg_wrap .nb_contact_form .form-group .submitBtn,
+.nb_basket_wrap table.basketTable thead tr th,
+.nb_basket_wrap table.basketTable tbody tr td .qtyboxwrap > span,
+.nb_basket_wrap table.basketTable tbody tr td .total,
+.nb_basket_wrap div.coupen_codewrap input[type="text"],
+.basketTotalwrap .mainhd,
+.basketTotalwrap .subTotalwrap,
+.basketTotalwrap .shipping_radiosec .head,
+.basketTotalwrap .shipping_radiosec .estimateWrap span,
+.basketTotalwrap .shipping_radiosec .estimateWrap a,
+.basketTotalwrap .shipping_radiosec .totalAmntsec,
+.basketTotalwrap .shipping_radiosec .proceed_tocheckout,
+.cont_shop_btn,
+.registration_form_sec .ahav_acc span,
+#signupPopup .modal-dialog .modal-content .modal-header .modal-title,
+#signupPopup .modal-dialog .modal-content .modal-body .loginForm .loginBtn,
+#signupPopup .modal-dialog .modal-content .modal-body .registrationSec .head,
+#signupPopup .modal-dialog .modal-content .modal-body .registrationSec .regBtn,
+#quickCartPopup .modal-dialog .modal-content .modal-header .modal-title,
+#quickCartPopup .modal-dialog .modal-content .modal-body .loginForm .loginBtn,
+#quickCartPopup .modal-dialog .modal-content .modal-body .registrationSec .head,
+#quickCartPopup .modal-dialog .modal-content .modal-body .registrationSec .regBtn,
+.nb_firstNav_res_lst_wrap .hav_mega_nav:after,
+.bloglistSec .bloglistSecInner .bloglistBox .nb_fb_con .heading,
+.bloglistSec .bloglistSecInner .bloglistBox .nb_fb_con .rdmrBtn,
+.blogdetWrap .headsec .blgHeadmain,
+.blogdetWrap .headsec .blogTimesec span.date,
+.youmayalLikesec .head,
+.youmayalLikesec .ymalList li .ymalBox .contwrap .ymalListHead,
+.youmayalLikesec .ymalList li .ymalBox .contwrap .date,
+.checkconfInner .checkconfirm_lftsec .subhead,
+.checkconfInner .checkconfirm_rgtsec .subhead,
+.checkconfInner .checkconfirm_rgtsec .prdList li .prodesc .prodHead,
+.checkconfInner .checkconfirm_rgtsec .prdList li .prodesc .prodDetRow span:last-child,
+.checkconfInner .checkconfirm_rgtsec .prodTotal span,
+.progressBarStep ul#progressList li span.count,
+.progressBarStep ul#progressList li.active span.txt,
+.myAccLeftNavsec .tabcontentInner .headMain,
+.myAccLeftNavsec .tabcontentInner .subhead,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .prdhead,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .stkStatus,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .prodDetlist li span .qtyinputbox,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .prodDetlist li span:last-child,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_right .prd_totLst li span:last-child,
+.orderDetls label,
+.orderItems h3,
+.uni-pages-main .nb_prd_filterwrap .list-group-item,
+.btn .button {
     font-weight: 800;
+    font-family: var(--primary-font-family);
 }
 
+.modal-title,
 .modal-dialog,
 .uni-pages-main .nb_prd_filterwrap,
-.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec {
+.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec,
+.nb_header .nb_headicolst li.cartIcoWrap a span,
+.nb_sec_navwrap .nb_sec_navlist li a,
+.nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap button,
+.nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap a,
+.nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap button:after,
+.nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap a:after,
+.nb_bannersec .np_bannerContentOuter .nb_bnr_count,
+.nb_feat_prod_sec .nb_featuredPrdCarrousle .nb_fp_boxwrap .prd_det_sec .prd_name,
+.nb_sub_sec .nb_sub_wrap .sub_form_wrap .nb_home_sub_form .sf_input_wrap input[type="text"],
+.nb_sub_sec .nb_sub_wrap .sub_form_wrap .nb_home_sub_form .sf_input_wrap input[type="email"],
+.ftb_sec .nb_ftb_box .nb_fb_con .date,
+.nb_footer .nb_footersec_inner .nb_footnav_wrap ul li a,
+.res_navWrapper .nb_firstNav_res_lst li a,
+.res_navWrapper .nb_sec_nav_res li a,
+.nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol li,
+.nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol li a,
+.nb_prdlisting_pgsec .breadCrumbtopsec .sortBy_outer .srtby_txt,
+.nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec #nb_prdlst_sortDrpdwn,
+.nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec #nb_prdlst_sortDrpdwn option,
+.nb_prdpg_fg label,
+.nb_filter_accordion .nb_filter_head h5,
+.nb_filter_accordion .nb_filter_head h5 button,
+.nb_prd_listing_wrap .tagList li a,
+.prd_lst_boxouter .prdName,
+.nb_qcvboxwrap .col_Sec .col_lbl,
+.nb_qcvboxwrap .availibility,
+.nb_qcvboxwrap .sizeWrap p,
+.nb_qcvboxwrap .footSec .qty > span,
+.nb_qcvboxwrap .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
+.nb_qcvboxwrap .footSec .qty .sortBysec #nb_prdpg_qtysel_box option,
+.nb_prd_det_rightsec .col_Sec .col_lbl,
+.nb_prd_det_rightsec .availibility,
+.nb_prd_det_rightsec .sizeWrap p,
+.nb_prd_det_rightsec .footSec .qty > span,
+.nb_prd_det_rightsec .footSec .qty .sortBysec #nb_prdpg_qtysel_box,
+.nb_prd_det_rightsec .footSec .qty .sortBysec #nb_prdpg_qtysel_box option,
+.nb_header_style2 h3,
+.nb_prd_namewamnt_box .prd_name,
+.contact_form_sec .contact_pg_wrap .nb_contact_form .reqfield_msg,
+.contact_form_sec .contact_pg_wrap .nb_contact_form .form-group label,
+.contact_form_sec .contact_pg_wrap .nb_contact_form .form-group input[type="text"],
+.contact_form_sec .contact_pg_wrap .nb_contact_form .form-group input[type="email"],
+.contact_form_sec .contact_pg_wrap .nb_contact_form .form-group textarea,
+.nb_basket_wrap table.basketTable tbody tr td .prdimgsec .prdname,
+.nb_basket_wrap table.basketTable tbody tr td .price,
+.nb_basket_wrap table.basketTable tbody tr td .qtyboxwrap input[type="number"],
+#signupPopup .modal-dialog .modal-content .modal-body .loginForm .form-group label,
+#signupPopup .modal-dialog .modal-content .modal-body .loginForm .rememberWrap,
+#quickCartPopup .modal-dialog .modal-content .modal-body .loginForm .form-group label,
+#quickCartPopup .modal-dialog .modal-content .modal-body .loginForm .rememberWrap,
+.bloglistSec .bloglistSecInner .bloglistBox .nb_fb_con .date {
     font-weight: 600;
+    font-family: var(--primary-font-family);
 }
 
-.uni {
+.body,
+.container,
+.nb_header .nb_mainnav > ul > li > a,
+.nb_header .nb_mainnav > ul > li.hav_sub_nav .nb_subnavWrap > ul.nb_f_snList li a,
+.nb_header .nb_mainnav > ul > li.hav_sub_nav .nb_subnavWrap > ul.nb_f_snList li.hav_sub_nav2 ul.nb_s_snList li a,
+.nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li > a,
+.nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li > ul.subList li a,
+.nb_sub_sec .nb_sub_wrap .sub_form_wrap .sf_des,
+.ftb_sec .nb_ftb_box .nb_fb_con .content,
+.nb_footer .nb_footersec_inner .nb_footcontact_wrap p,
+.res_navWrapper .nb_res_nav_closeTrigger,
+.nb_qcvboxwrap .subContent,
+.nb_prd_det_rightsec .subContent,
+.nb_prod_bottomdes .content,
+.ZoomViewWrapper #closeZoomViewer,
+.contact_form_sec .subHead_content,
+.basketTotalwrap .shipping_radiosec .shippingtyp_list li,
+.registration_form_sec .ahav_acc,
+#signupPopup .modal-dialog .modal-content .modal-body .loginForm,
+#signupPopup .modal-dialog .modal-content .modal-body .registrationSec p,
+#quickCartPopup .modal-dialog .modal-content .modal-body .loginForm,
+#quickCartPopup .modal-dialog .modal-content .modal-body .registrationSec p,
+.bloglistSec .bloglistSecInner .bloglistBox .nb_fb_con .content,
+.bloglistSec .blgpaginationwrap .paginationList li a,
+.blogdetWrap .contentSec p,
+.youmayalLikesec .ymalList li .ymalBox .contwrap .content,
+.checkconfInner .checkconfirm_lftsec .content,
+.checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:checked + label,
+.checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:not(:checked) + label,
+.checkconfInner .checkconfirm_rgtsec .content,
+.checkconfInner .checkconfirm_rgtsec .prdList li .prodesc .prodDetRow span,
+.checkconfInner .checkconfirm_rgtsec .prctchkoutbtn,
+.progressBarStep ul#progressList li span.txt,
+.progressNavBar button,
+.myAccLeftNavsec .leftsideNavWrap a,
+.myAccLeftNavsec .tabcontentInner input[type="text"],
+.myAccLeftNavsec .tabcontentInner input[type="email"],
+.myAccLeftNavsec .tabcontentInner select,
+.myAccLeftNavsec .tabcontentInner button,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .prodDetlist li span,
+.myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_right .prd_totLst li span,
+.orderDetls h6,
+.orderDetls a,
+.returnDetls button,
+.returnDetls .dropdown a,
+.orderItems .itemNum,
+.orderItems h6,
+.orderItems .qty,
+.orderProductStatus li,
+.orderItems .estimtDate h5,
+.orderItems .estimtDate p,
+.orderItems h5 {
     font-weight: 400;
+    font-family: var(--primary-font-family);
 }
 
 .search_wrap_main .search_btn:hover,
@@ -246,11 +425,14 @@ nb_prdpg_fg label,
 .myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_left .prod_det .prdhead,
 .orderDetls label,
 .orderItems h3,
-.orderItems .itemNum,
 .pagination > li > a,
 .pagination > li > span,
 .pagi .tot {
     color: var(--dark-font-color);
+}
+
+.orderItems .itemNum {
+    color: var(--dark-font-color) !important;
 }
 
 .search_wrap_main .search_input,
