--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -215,7 +215,7 @@ input[type="number"]::-webkit-outer-spin-button {
     background-color: #fff;
     z-index: 150;
     position: fixed;
-    top: 0;
+    top: -50px;
     left: 0;
     padding: 54px 0px;
     box-shadow: 0px 0px 7px -3px #000;
@@ -251,8 +251,13 @@ input[type="number"]::-webkit-outer-spin-button {
             outline: none;
         }
 
+    .search_wrap_main .search-box-buttons {
+        width: 8%;
+    }
+
     .search_wrap_main .search_btn {
-        width: 4%;
+        width: 50%;
+        min-width: 50px;
         border: none;
         background-color: transparent;
         color: black;
