bug fixes on UI Imported from Changeset 2586

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -17,7 +17,7 @@
                 <label class="sr-only" for="searchinput">Name</label>
                 <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
                 <div class="search-box-buttons float-left">
-                    <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</i></button>
+                    <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</button>
                     <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();"><i class="icon-search"></i></button>
                 </div>
             </form>
