Fix boundles mapping issue on published app Imported from Changeset 2588

--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/unobtrusive")
 
+    @Styles.Render("~/Content/bootstrap")
     @Scripts.Render("~/bundles/bootstrap")
     <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/Smart/app/css/ui-settings.css"})" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
