login pages validation and design changes added with account page, wish list and  order history pages are added need testing. Imported from Changeset 2590

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -1000,6 +1000,9 @@ body.modal-open {
     overflow: auto !important;
     padding-right: unset !important;
 }
+.error {
+    color: red;
+}
 /*Scrollbar css start*/
 /* width */
 ::-webkit-scrollbar {
