--- a/WarehouseEcommerce/Views/Theme/University/Shared/_AccountSideBar.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_AccountSideBar.cshtml
@@ -1,5 +1,5 @@
 ﻿
-    <div class="col-lg-3 col-md-12 ">
+    <div class="col-sm-3">
         <ul class="menu-about account-ul">
             <li class="active"><a href="@Url.Action("Account","User")" class="">My Account</a></li>
             <li><a href="@Url.Action("OrderHistory","User")">Order History</a></li>
