--- a/WarehouseEcommerce/Views/Theme/University/User/Create.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Create.cshtml
@@ -6,22 +6,23 @@
 @using (Html.BeginForm("Create", "User", FormMethod.Post, new { @class = "loginForm", id = "" }))
 {
     @Html.AntiForgeryToken()
-
+    <h2 class="bg-success alert-message-reg"></h2>
+    <br />
     <div class="form-group">
         @Html.EditorFor(model => model.FirstName, new { htmlattributes = new { @class = "form-control", @placeholder = "Enter First Name" } })
-        @Html.ValidationMessageFor(model => model.FirstName)
+
     </div>
     <div class="form-group">
         @Html.EditorFor(model => model.LastName, new { htmlattributes = new { @class = "form-control", @placeholder = "Enter Last Name" } })
-        @Html.ValidationMessageFor(model => model.LastName)
+
     </div>
     <div class="form-group">
         @Html.EditorFor(model => model.Email, new { htmlattributes = new { @class = "form-control", @placeholder = "Enter Email" } })
-        @Html.ValidationMessageFor(model => model.Email)
+
     </div>
     <div class="form-group">
         @Html.PasswordFor(model => model.Password, new { @class = "form-control", @placeholder = "Enter Password" })
-        @Html.ValidationMessageFor(model => model.Password)
+
     </div>
 
 
