--- a/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
@@ -5,14 +5,17 @@
 
 @using (Html.BeginForm("LoginUser", "User", FormMethod.Post, new { @class = "loginForm", id = "" }))
 {
-   
+
+    <h5 class="alert-message-login" style="color:red"></h5><br />
     <div class="form-group">
-        <input id="UserName" type="text" value="" name="UserName" required autocomplete="off" class="form-control" placeholder="Enter UserName">
+
+        @Html.EditorFor(model => model.UserName, new { htmlattributes = new { @class = "form-control", @placeholder = "Enter user name" } })
         @Html.ValidationMessageFor(model => model.UserName)
     </div>
     <div class="form-group">
-        @Html.PasswordFor(model => model.UserPassword, new { required = "required", @class = "form-control", @placeholder = "Enter your password" })
-        @Html.ValidationMessageFor(model => model.UserPassword)
+        
+        @Html.PasswordFor(model => model.UserPassword, new {@class = "form-control", @placeholder = "Enter your password" })
+      
     </div>
     <button type="button" class="btn btn-primary loginBtn" onclick="LoggedIn()">
         Login
